--- a/package.json
+++ b/package.json
@@ -30,8 +30,7 @@
     "vue-loading-overlay": "^3.0.1",
     "vue-router": "^3.0.1",
     "vue-video-player": "^5.0.2",
-    "vuex": "^3.5.1",
-    "wordcloud": "^1.2.2"
+    "vuex": "^3.5.1"
   },
   "devDependencies": {
     "autoprefixer": "^7.1.2",
